fixing spacing on no results block

--- a/styles/pages/_manage-apps-page.scss
+++ b/styles/pages/_manage-apps-page.scss
@@ -47,6 +47,20 @@
     margin-bottom: 100px;
     padding: 0;
 
+    .no-results-container {
+      p {
+        margin: 0;
+      }
+      
+      p.as-h2 {
+        margin: 60px auto 30px;
+      }
+
+      button {
+        margin-top: 60px;
+      }
+    }
+
     .loading-container {
       text-align: center;
 
